; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_highlevel.c_hpsb_unregister_highlevel.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_highlevel.c_hpsb_unregister_highlevel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hpsb_highlevel = type { i32, i32 }

@hl_irqs_lock = common dso_local global i32 0, align 4
@hl_drivers_sem = common dso_local global i32 0, align 4
@highlevel_for_each_host_unreg = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hpsb_unregister_highlevel(%struct.hpsb_highlevel* %0) #0 {
  %2 = alloca %struct.hpsb_highlevel*, align 8
  %3 = alloca i64, align 8
  store %struct.hpsb_highlevel* %0, %struct.hpsb_highlevel** %2, align 8
  %4 = load i64, i64* %3, align 8
  %5 = call i32 @write_lock_irqsave(i32* @hl_irqs_lock, i64 %4)
  %6 = load %struct.hpsb_highlevel*, %struct.hpsb_highlevel** %2, align 8
  %7 = getelementptr inbounds %struct.hpsb_highlevel, %struct.hpsb_highlevel* %6, i32 0, i32 1
  %8 = call i32 @list_del(i32* %7)
  %9 = load i64, i64* %3, align 8
  %10 = call i32 @write_unlock_irqrestore(i32* @hl_irqs_lock, i64 %9)
  %11 = call i32 @down_write(i32* @hl_drivers_sem)
  %12 = load %struct.hpsb_highlevel*, %struct.hpsb_highlevel** %2, align 8
  %13 = getelementptr inbounds %struct.hpsb_highlevel, %struct.hpsb_highlevel* %12, i32 0, i32 0
  %14 = call i32 @list_del(i32* %13)
  %15 = call i32 @up_write(i32* @hl_drivers_sem)
  %16 = load %struct.hpsb_highlevel*, %struct.hpsb_highlevel** %2, align 8
  %17 = load i32, i32* @highlevel_for_each_host_unreg, align 4
  %18 = call i32 @nodemgr_for_each_host(%struct.hpsb_highlevel* %16, i32 %17)
  ret void
}

declare dso_local i32 @write_lock_irqsave(i32*, i64) #1

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @write_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @down_write(i32*) #1

declare dso_local i32 @up_write(i32*) #1

declare dso_local i32 @nodemgr_for_each_host(%struct.hpsb_highlevel*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
